Modify to meet build & deploy 1. move source under src folder 2. modify paclage.json build commands 3. add dockerfile 4. add k8s yaml configuration 5. gitignore and vscode settings

--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -4,4 +4,5 @@ ADD build /app
 ENV NODE_CONFIG_DIR /app/config
 WORKDIR /app
 ENTRYPOINT ["env", "DEBUG=app:*", "node"]
-CMD ["dist/app.server.js"]
+EXPOSE 3001
+CMD ["dist/app.js"]
