--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,7 @@ bower_components
 .lock-wscript
 
 # Compiled binary addons (http://nodejs.org/api/addons.html)
-build/Release
+build
 dist
 
 # Dependency directories
@@ -57,4 +57,3 @@ typings/
 
 # dotenv environment variables file
 .env
-
